--- a/Topaz/Views/Layouts/_login.cshtml
+++ b/Topaz/Views/Layouts/_login.cshtml
@@ -7,6 +7,7 @@
     <link href="/Content/Stylesheets/login.css" rel="stylesheet">
     <script src="/Scripts/jquery-3.1.1.min.js"></script>
     <script src="/Scripts/bootstrap.min.js"></script>
+    <script src="/Scripts/Views/login.js"></script>
 </head>
 <body>
 @RenderBody()
