--- a/Topaz/Content/Stylesheets/login.css
+++ b/Topaz/Content/Stylesheets/login.css
@@ -1,2 +1,96 @@
 ﻿body {
+    background-color: #213554;
+    color: white;
+}
+
+.login_panel {
+    background-color: white;
+    color: grey;
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+}
+
+.login_selection {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+
+.login_selection li {
+    width: 350px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.login_selection li a {
+    display: block;
+    background-color: #999999;
+    color: white;
+    text-align: center;
+    padding: 12px;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.login_selection li a.active {
+    background-color: white;
+    color: #888888;
+    cursor: default;
+}
+
+.subpanel_title {
+    line-height: 40px;
+    background-color: #5b687c;
+    color: white;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bolder;
+    text-shadow: 1px 1px 2px #AAAAAA;
+    margin-bottom: 10px;
+}
+
+.data_entry_field {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.data_entry_seperator {
+    width: 100%;
+    line-height: 10px;
+    border-top: solid 0.5px #9ca8bc;
+    width: 97%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.data_entry_control {
+    width: 100%;
+    padding-right: 20px;
+    text-align: right;
+    line-height: 50px;
+    padding-bottom: 20px;
+}
+
+.btn-create {
+    width: 200px !important;
+}
+.field_title {
+    width: 150px;
+    line-height: 35px;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.field_entry {
+    width: 80%;
+    padding-right: 20px;
+    line-height: 35px;
 }
