--- a/Topaz/Content/Stylesheets/login.css
+++ b/Topaz/Content/Stylesheets/login.css
@@ -9,7 +9,7 @@
     width: 700px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 .login_selection {
@@ -53,7 +53,7 @@
     text-align: center;
     font-size: 24px;
     font-weight: bolder;
-    text-shadow: 1px 1px 2px #AAAAAA;
+    /*text-shadow: 1px 1px 2px #AAAAAA;*/
     margin-bottom: 10px;
 }
 
@@ -72,11 +72,19 @@
 }
 
 .data_entry_control {
-    width: 100%;
+    padding-left: 20px;
     padding-right: 20px;
-    text-align: right;
-    line-height: 50px;
+    display: flex;
     padding-bottom: 20px;
+}
+
+.data_entry_control_create {
+    width: 50%;
+}
+
+.data_entry_control_cancel {
+    width: 50%;
+    text-align: right;
 }
 
 .btn-create {
@@ -93,4 +101,40 @@
     width: 80%;
     padding-right: 20px;
     line-height: 35px;
+}
+
+.create_errors {
+    width: 100%;
+    display: flex;
+}
+
+.data_entry_title {
+    width: 100%;
+    background-color: #dddddd;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 16px;
+    display: flex;
+    margin-bottom: 5px;
+    margin-top: 20px;
+}
+
+.data_entry_subset {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.data_entry_title_fields {
+    width: 50%;
+    padding-left: 50px;
+}
+
+.check_password_error {
+    color: red;
+    font-weight: bold;
+}
+
+.check_password_ok {
+    color: green;
+    font-weight: bold;
 }
